--- a/notebook_compile_example.ipynb
+++ b/notebook_compile_example.ipynb
@@ -718,13 +718,208 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "teff_file(\"teff_tags.txt\", \"test_tags_outputXX.txt\")"
+    "teff_file(\"teff_tags.txt\", \"test_tags_outputXX.txt\")s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4229aa20-6b34-42af-8df7-780de564c4fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'primary_spt': 'G6V',\n",
+       " 'primary_spt_lower': 'G8V',\n",
+       " 'primary_spt_upper': 'G3V',\n",
+       " 'comp_spt': 'M1V',\n",
+       " 'comp_spt_lower': 'M1.5V',\n",
+       " 'comp_spt_upper': 'M0.5V',\n",
+       " 'primary_mag': 3.409,\n",
+       " 'primary_mag_lower': 3.532,\n",
+       " 'primary_mag_upper': 3.282,\n",
+       " 'comp_mag': 5.64,\n",
+       " 'comp_mag_lower': 5.75,\n",
+       " 'comp_mag_upper': 5.36}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spectral_type(5601.4, 105.1, \"Kcont\", 2.192, 0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9011b89c-253e-49dc-bbb0-3f07fe066c6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'target': 2673,\n",
+       " 'separation': 1.054,\n",
+       " 'separation_uncertainty': 0.003,\n",
+       " 'position_angle': 271.945,\n",
+       " 'pa_uncertainty': 0.195,\n",
+       " 'filter_name': 'Kcont',\n",
+       " 'delta_magnitude': 2.05,\n",
+       " 'd_mag_uncertainty': 0.01,\n",
+       " 'primary_spt': 'G6V',\n",
+       " 'companion_spt': 'M0.5V',\n",
+       " 'teff': 5601.4,\n",
+       " 'teff_uncertainty': 105.1,\n",
+       " 'obsdate': '2023-04-26',\n",
+       " 'tag': 429156}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_all(2673, 0.009942, 811.7, 811.3, 917.7, 814.9, \"Kcont\", 12.4244, 0.00340869, 14.4749, 0.00920180, \"2023-04-26\", 429156)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "dc1bf286-516f-494f-bdb0-0eced818e064",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'separation': 1.937,\n",
+       " 'separation_uncertainty': 0.014,\n",
+       " 'position_angle': 57.748,\n",
+       " 'pa_uncertainty': 0.106}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "position(0.0254, 603.2, 603, 667.7, 643.7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9b5f1d35-2239-4e31-b977-9648be876705",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'primary_spt': 'G6V',\n",
+       " 'primary_spt_lower': 'G8V',\n",
+       " 'primary_spt_upper': 'G3V',\n",
+       " 'comp_spt': 'M0.5V',\n",
+       " 'comp_spt_lower': 'M1V',\n",
+       " 'comp_spt_upper': 'M0.5V',\n",
+       " 'primary_mag': 3.409,\n",
+       " 'primary_mag_lower': 3.532,\n",
+       " 'primary_mag_upper': 3.282,\n",
+       " 'comp_mag': 5.36,\n",
+       " 'comp_mag_lower': 5.64,\n",
+       " 'comp_mag_upper': 5.36}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spectral_type(5601.4, 105.1, \"Kcont\", 2.05, 0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b9c1bdff-f6ec-4985-a0ef-f05e5fe207ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_file(\"combined_test.txt\", \"combined_test_outputX.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0a8bd253-412e-4ae7-a80a-06a56daf3e5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'target': 7011,\n",
+       " 'separation': 7.288,\n",
+       " 'separation_uncertainty': 0.052,\n",
+       " 'position_angle': 309.627,\n",
+       " 'pa_uncertainty': 0.028,\n",
+       " 'filter_name': 'K',\n",
+       " 'delta_magnitude': 6.045,\n",
+       " 'd_mag_uncertainty': 0.165,\n",
+       " 'primary_spt': 'G8V',\n",
+       " 'companion_spt': 'M6.5V',\n",
+       " 'teff': 5493.0,\n",
+       " 'teff_uncertainty': 140.6,\n",
+       " 'obsdate': '2025-06-26',\n",
+       " 'tag': 1234567}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_all(7011, 0.0254, 502, 505, 723, 688, \"K\", 14.072, 0.00328125, 20.117, 0.16519, \"2025-06-26\", 1234567)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9011b89c-253e-49dc-bbb0-3f07fe066c6a",
+   "id": "a7077fa0-749b-418e-8069-ea8d38099016",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "python combined_single.py 7011 0.0254 502 505 723 688 K 14.072 0.00328125 20.117 0.16519 2025-06-26 1234567"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9296d583-24f0-4854-8db0-126ee696a577",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Perhaps you forgot a comma? (88915590.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[7], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    position(100, 100, 200, 100, --s 0.0254)\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     ]
+    }
+   ],
+   "source": [
+    "position(100, 100, 200, 100, --s 0.0254)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cb2b2bf-da02-4538-a902-e65599bfb788",
    "metadata": {},
    "outputs": [],
    "source": []
