--- a/notebook_compile_example.ipynb
+++ b/notebook_compile_example.ipynb
@@ -465,22 +465,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "b48e2184-0139-4271-b3fb-8ebabfc74b35",
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_file(\"combined_example.txt\", \"combined_example_outputV2.txt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "9a481376-1fb0-417e-9e49-856601a3cb85",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_file(\"all_test.txt\", \"all_test_output.txt\")"
+    "## Example showing mirrored results, unmirrored results, unsupported filter error, and no matching target error\n",
+    "\n",
+    "all_file(\"combined_example.txt\", \"combined_example_output.txt\")"
    ]
   },
   {
